# SCOP

./: CMakeLists.txt  build.sh
include/: Mesh.hpp  Obj.hpp  Shader.hpp  ShaderProgram.hpp  VAO.hpp  VBO.hpp  Window.hpp
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: Mesh.cpp  Obj.cpp  Shader.cpp  ShaderProgram.cpp  VAO.cpp  VBO.cpp  Window.cpp  scop.cpp
